# Camera-Calibration-Algorithms

./: README.md
Calibration Parameters/: default.xml
Calibration Parameters/RegistrationMatrices/: TtoLapCam.xml  TtoPatient.xml
Calibration Parameters/RotationModelingParameters/: intrinsicsData.xml
Calibration Parameters/TtoBoards/: TtoCharucoBoard.xml
Calibration Parameters/Zero Degree Calibration/: out_camera_data.xml  poses_data_text.txt  zero_Degrees_Pose.xml
Calibration with Charuco/: CMakeLists.txt  calibrate_camera_charuco.cpp  default.xml
Camera Registration/: CMakeLists.txt  Maxer_NDI_Tracker.cpp  Maxer_NDI_Tracker.h  charuco.cpp  main.cpp  ndicapimaxer.h
Camera Registration/Calibration Parameters/: TtoGrid(RefChessboard 8 mm)  TtoGrid.xml  out_camera_data.xml
Charuco Detection/: CMakeLists.txt  detect_board_charuco.cpp  out_camera_data.xml
HandEye Callibration/: CMakeLists.txt  HandEye Callibration.kdev4  HandEyeCalibration.cpp  Maxer_NDI_Tracker.cpp  out_camera_data b.xml  out_camera_data.xml  poses_data.xml  poses_data_text.txt
HandEye Callibration Charuco/: CMakeLists.txt  HandEyeCalibration.cpp  HandEyeCharucoNDI.cpp  detect_board_charuco.cpp  out_camera_data.xml  poses_data_text.txt
HandEye Callibration Charuco/.kdev4/: HandEye Callibration.kdev4  rotation modeling.kdev4
HandEye Callibration Charuco/TrackingArrays/: gridPatern.rom
HandEye Callibration/.kdev4/: NDI Example Maxer API.kdev4
HandEye Callibration/TrackingArrays/: RefCalibGridChessboard.rom
IntrisicAndHandEyeCharucoCalibration/: Maxer_NDI_Tracker.h  calibrate_camera_charuco.cpp  default.xml
IntrisicAndHandEyeCharucoCalibration/TrackingArrays/: RefCalibGridCharucoboard.rom
rotation modeling, eclipse fitting data/: CMakeLists.txt  intrinsicsFileText (copy).txt  intrinsicsFileText.txt  rotation modeling, eclipse fitting data.kdev4  rotation_intrinsics__data.cpp
rotation modeling, eclipse fitting data/.kdev4/: Latency Experiment.kdev4  rotation modeling, eclipse fitting data.kdev4
